#3 better description of quantum advanatge

--- a/English Chapters/3.1_Complex_numbers.ipynb
+++ b/English Chapters/3.1_Complex_numbers.ipynb
@@ -103,11 +103,10 @@
     " The magnitude of a complex number $z$ is denoted by two vertical bars as $|z|$. It is calulated the same was as the Euclidean distance as \n",
     "\n",
     " $$\n",
-    " |z| = \\sqrt{a^2 + b^2}\n",
+    " |z| = \\sqrt{x^2 + y^2}\n",
     " $$\n",
     "\n",
     " With $z = x + yi$. \n",
-    "\n",
     "\n",
     " The magnitude of a complex number is important for figuring out the probability of getting an output from a quantum computation. This will be explored in chapter 4.\n",
     "\n",
@@ -145,7 +144,7 @@
     "\n",
     "In the context of quantum information this object $ e^{i\\theta}$ is called a phase and is of exceptional importance. To explain why $\\theta$ is so significant would require its own chapter. Instead it shall be incorporated into later chapters as needed.\n",
     "\n",
-    "\n",
+    "<!-- \n",
     "### 3.2.6 Polar form of complex numbers \n",
     "\n",
     "\n",
@@ -171,10 +170,7 @@
     "$$z = x + iy = re^{i\\theta}$$ \n",
     "\n",
     "\n",
-    "Where $r$ is the magnitude of the complex number $r = |z| = \\sqrt{x^2 + y^2}$ and $\\theta$ is the angle made between the real and the imaginary plane\n",
-    "\n",
-    "\n",
-    "[INSERT IMAGE HERE]"
+    "Where $r$ is the magnitude of the complex number $r = |z| = \\sqrt{x^2 + y^2}$ and $\\theta$ is the angle made between the real and the imaginary plane  -->"
    ]
   },
   {
