--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# 5 Single Qubits & the Bloch Sphere  \n",
     "\n",
+    "Having covered what quantum states are, this chapter will cover qubits and how we can control them. \n",
+    "\n",
     "## 5.1 The unit of information\n",
     "\n",
     "Having introduced some of the basic mathematics to describe quantum computing, let's get started. \n",
@@ -31,25 +33,27 @@
     "\n",
     "![Bloch_sphere](Images\\Bloch_Sphere.png) [1]\n",
     "\n",
-    "\n",
     "At the top of the sphere  is the state $\\ket{0}$, at the botom is the state $\\ket{1}$. Our state $\\ket{\\psi}$ is somewhere in between so it is a superposition of $\\ket{0}$ & $\\ket{1}$. The closer $\\ket{\\psi}$  is to the top, the greater the probability of measuring $\\ket{0}$, the same is true for the bottom with $\\ket{1}$. The angle $\\theta$ between the $\\ket{0}$ & $\\ket{\\psi}$ gives us these probabilities. \n",
     "\n",
     "Notice how $\\ket{0}$ and $\\ket{1}$ are seperated by $180\\degree (\\pi)$ on the sphere, but they are perpendicular, so the angle between them is actually $90\\degree (\\pi/2)$. The angles on the Bloch sphere are twice as large as the angles for the qubits.\n",
     "\n",
-    "> Note: the angle which gives the probabilities is $\\theta/2$ \n",
+    "> Note: the angle on the Bloch sphere that gives the probabilities is $\\theta/2$ \n",
     "\n",
     "$$\n",
-    "P(\\ket{0}) = \\braket{0|\\psi} = (\\cos{\\theta/2})^2\n",
+    "P(\\ket{0}) = |\\braket{0|\\psi}|^2 = (\\cos{\\theta/2})^2\n",
     "$$\n",
     "Similarly for the probability of $\\ket{1}$\n",
     "\n",
-    "$$P(\\ket{1}) = \\braket{0|\\psi} = (\\sin{\\theta/2})^2$$\n",
+    "$$P(\\ket{1}) = |\\braket{0|\\psi}|^2 = (\\sin{\\theta/2})^2$$\n",
     "\n",
     "A useful tool for understanding the Bloch sphere [can be found here](https://javafxpert.github.io/grok-bloch/)\n",
     "\n",
+    "---\n",
     "### Exercise 5.1 \n",
     "\n",
-    "We know the superposition state has equal probabilities of $\\ket{0}$ & $\\ket{1}$, where on the Bloch sphere would this state be represented? What is the angle $\\theta$ that would describe this state?\n",
+    "We know the superposition state $\\ket{+}$ has equal probabilities of $\\ket{0}$ & $\\ket{1}$. Where on the Bloch sphere would this state be represented? What is the angle $\\theta$ that would describe this state?\n",
+    "\n",
+    "---\n",
     "\n",
     "## 5.3 It's not just a phase!\n",
     "\n",
@@ -57,7 +61,7 @@
     "\n",
     "There is another important parameter that describes a qubit: the phase. \n",
     "\n",
-    "At last, our coins will not work to describe phase, there is no analogue in classical computing, nor in probability. \n",
+    "At last, our coins will not work to describe phase, there is no analogue in classical computing, nor in probability.\n",
     "\n",
     "Two quantum states can have the same probabilities, but be completely different states.\n",
     "\n",
@@ -67,7 +71,7 @@
     "F =  \\frac{1}{\\sqrt{2}} \\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "In quantum computing, this operator is known as a __Hadamard gate__ with symvbol $H$. \n",
+    "In quantum computing, this operator is known as a __Hadamard gate__ with symbol $H$. \n",
     "\n",
     "If we apply $H$ to $\\ket{0}$ we get the superposition state \n",
     "\n",
@@ -83,11 +87,9 @@
     "\n",
     "We call this state $\\ket{-}$ because of the minus sign between the $\\ket{0}$ & $\\ket{1}$\n",
     "\n",
-    "The probability of getting $\\ket{0}$ or $\\ket{1}$ is the same for both, so they're the same state? \n",
-    "\n",
-    "Nope. \n",
-    "\n",
-    "In fact, there is an easy way for us to tell which one we have. \n",
+    "The probability of getting $\\ket{0}$ or $\\ket{1}$ is the same for both. If we were to measure either state, we would get 0 half the time and 1 the other half the time. Since the measurement gives the same outcome you might think they are the same state. \n",
+    " \n",
+    "They are different states, and suprisingly there is an easy way for us to tell which one we have. \n",
     "\n",
     "What happens if we apply $H$ on these states? \n",
     "\n",
@@ -103,7 +105,9 @@
     "\n",
     "So if we apply $H$ once to $\\ket{0}$ we get $\\ket{+}$ and then applying it again goes back to $\\ket{0}$. \n",
     "\n",
-    "So if we ever have $\\ket{+}$ we apply $H$ and get $\\ket{0}$ 100% of the time. If we get $\\ket{1}$ we must have had another state to begin with. \n",
+    "So if we ever have $\\ket{+}$ we apply $H$ and get $\\ket{0}$ 100% of the time. If we get $\\ket{1}$ we must have had another state to begin with. If we had $\\ket{-}$ would measure 1 100% of the time. \n",
+    "\n",
+    "---\n",
     "\n",
     "### Exercise 5.2\n",
     "\n",
@@ -112,6 +116,30 @@
     "### Exercise 5.3\n",
     "\n",
     " When we apply the Hadamard twice to a state, we get the same state back. Without doing any maths, consider flipping a coin. Why does flipping the coin twice not guarantee you get back the side you started with?\n",
+    "\n",
+    "---\n",
+    "\n",
+    "In this example, where is the phase? \n",
+    "\n",
+    "The phase is contained in the + or - sign between the $\\ket{0}$ & $\\ket{1}$. \n",
+    "\n",
+    "The phase can be more than just $\\pm 1$, it can be any complex number with magnitude 1. In general, any phase $\\phi$ can be written as \n",
+    "\n",
+    "$$ \\ket{0} + e^{i\\phi}\\ket{1} $$\n",
+    "\n",
+    "[The probability amplitudes have been ignored]\n",
+    "\n",
+    "\n",
+    "Remember Euler's formula (section 3.1.2) which allows us to convert from the exponential to the complex number\n",
+    "\n",
+    "$$ e^{i \\theta} = cos(\\theta) + i sin(\\theta) $$\n",
+    "\n",
+    "If we choose $\\theta = 0$ we get $e^0 = 1$ which gives us \n",
+    "\n",
+    "\n",
+    "The phase is also shown on the Bloch sphere. In the above diagram the state $\\ket{\\psi}$ is described by two angles $\\theta$ describing the probabilities of measuring 0 or 1 and $\\phi$ describing the phase. \n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -128,14 +156,19 @@
     "----- | ----- | ----- | ----- | -----|\n",
     "I | Identity: do nothing | $\\ket{0} \\rightarrow  \\ket{0} $ | $\\ket{1} \\rightarrow \\ket{1}$ | $\\begin{bmatrix} 1 & 0 \\\\ 0 & 1 \\end{bmatrix}$\n",
     "X | Not: Swaps $\\ket{0}$ with $\\ket{1}$   |$\\ket{0} \\rightarrow \\ket{1}$ |$\\ket{1} \\rightarrow  \\ket{1}$ | $\\begin{bmatrix} 0 & 1 \\\\ 1 & 0 \\end{bmatrix}$|\n",
-    "Y | Y: Rotation by angle $\\pi$ around the y-axis | $\\ket{0} \\rightarrow  \\ket{0} $ |$\\ket{1} \\rightarrow $ | |\n",
-    "Z | Z: Adds a phase of $e^{i\\pi}$ to $\\ket{1}$|$\\ket{0} \\rightarrow \\ket{0}$|$\\ket{1} \\rightarrow -\\ket{1}$ | |\n",
+    "Y | Y: Rotation by angle $\\pi$ around the y-axis | $\\ket{0} \\rightarrow  i\\ket{1} $ |$\\ket{1} \\rightarrow -i\\ket{0} $ | $\\begin{bmatrix} 0 & -i \\\\ i & 0 \\end{bmatrix}$|\n",
+    "Z | Z: Adds a phase of $e^{i\\pi}$ to $\\ket{1}$|$\\ket{0} \\rightarrow \\ket{0}$|$\\ket{1} \\rightarrow -\\ket{1}$ |$\\begin{bmatrix} 1 & 0 \\\\ 0 & -1 \\end{bmatrix}$ |\n",
     "H | Hadamard: Creates the superposition state | $\\ket{0} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} + \\ket{1})$ | $\\ket{1} \\rightarrow \\frac{1}{\\sqrt{2}} ( \\ket{0} - \\ket{1})$ | $\\frac{1}{\\sqrt{2}}\\begin{bmatrix} 1 & 1 \\\\ 1 & -1 \\end{bmatrix} $\n",
     "<!-- S | Adds a phase of $e^{\\pi/2}$ |$\\ket{0} \\rightarrow  \\ket{0} $ | \n",
     "T | Adds a phase of $e^{\\pi/4}$| $\\ket{0} \\rightarrow  \\ket{0} $| | -->\n",
     "\n",
+    "Sometimes it is easier to perform gates by knowing what they do to the $\\ket{0}$, $\\ket{1}$ states, sometimes it is easier to do the matrix multiplication. \n",
     "\n",
+    "A more compresnsive list of gates [can be found here](https://raw.githubusercontent.com/qiskit-community/qiskit-textbook/main/content/ch-states/supplements/single-gates-cheatsheet.pdf) \n",
     "## 5.5 Parameterised quantum gates \n",
+    "\n",
+    "In addition to these fixed quantum gates, there are quantum gates we can specify ourselves. These gates are described by a parameter we can control to change what the gate does. \n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -144,6 +177,7 @@
     "\n",
     "- The state of a qubit can be represented on the Bloch sphere\n",
     "- The BS shows the probability and phase of a qubit \n",
+    "- The phase of a qubit is the $e^{i\\theta}$ difference between the $\\ket{0}$ & $\\ket{1}$ states\n",
     "- There are many qubit gates we can use to perform operations on qubits\n",
     "\n",
     "### References \n",
