--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "# 6 Multiple Qubits \n",
     "\n",
-    "## 6.1 More than the Sum of it's Parts\n",
+    "## 6.1 More than the sum of it's parts\n",
     "\n",
-    "If quantum computing was nothing more than a collection of qubits processed individually, there would be little point in building a quantum computer. Even classical computing requires more than operations on single bits to do even basic addition. \n",
+    "If quantum computing was nothing more than a collection of qubits processed individually, there would be little point in building a quantum computer. A single qubit can be modelled using 2x2 matrices - you can even work these out by hand! Even if we were to have a large number of these in parallel, it would still be very easy to simulate a large number of qubits. \n",
     "\n",
     "Having qubits interact with one another allows for more complex algorithms. Thanks to entanglement, one qubit can control what happens to another. This has some interesting implications for quantum algorithms. \n",
     "\n",
@@ -46,13 +46,33 @@
     "2. For the first digit there is a 0, so we do nothing. \n",
     "3. The second digit is 1 so we do $2^{7-1} = 2^6 = 64$. \n",
     "4. Adding $0 + 64 = 64$.\n",
-    "5. The sum we obtain is \n",
+    "5. The sum we get is\n",
     "\n",
     "$$\n",
     "0 + 2^6 +0  + 2^4 + 2^3+ 0 + 0 + 2^0 = 89 \n",
     "$$\n",
     "\n",
     "Here we needed at least 6 digits in binary to represent a number with 2 digits in decimal. The decimal notation is much more efficient. \n",
+    "\n",
+    "### 6.2.2 Reading quantum states \n",
+    "\n",
+    "Let's say we wanted to encode the number 5 onto a quantum state. \n",
+    "\n",
+    "We know $ 5 = 2^2 + 2^0$ so we can write 5 as 101 in binary. \n",
+    "\n",
+    "As there are 3 digits, we need 3 qubits to represent this number. \n",
+    "\n",
+    "The qubit on the left is in state 1, the qubit in the middle is in state 0 and the qubit on the right is in state 1. \n",
+    "\n",
+    "$$ \\ket{101} = \\ket{q_2q_1q_0} $$\n",
+    "\n",
+    "Here we use the convention where the first qubit ($2^0$) is on the right, with the next qubit one to the left and the last qubit the most to the right. \n",
+    "\n",
+    "> Quantum states are read right-to-left with the first qubit at the end\n",
+    "\n",
+    "### 6.2.3 Column vectors for multiple qubits \n",
+    "\n",
+    "Keeping with the number 5, the state vector for this number \n",
     "\n",
     "## 6.3 Multiple qubits, multiple gates \n",
     "\n",
@@ -95,10 +115,14 @@
     "\n",
     "\n",
     "\n",
-    "$^*$ I refuse to aknowledge quantum computers that use a base other than 2\n",
+    "$^*$ There have been proposals for using a base other than 2 for quantum computing. This has some advanatges but the difficulty in contructing algorithms combined with the difficulties in engineering such a device have prevented any significant machine from being built.\n",
     "\n",
     "[1] L.Vivah, [Learn How to Read Binary in 5 minutes](https://medium.com/@LindaVivah/learn-how-to-read-binary-in-5-minutes-dac1feb991e), 2018\n",
-    "\n"
+    "\n",
+    "## Summary Chapter 6 \n",
+    "\n",
+    "- Quantum computers work in binary \n",
+    "- Quantum states are read right-to-left with the first qubit at the end\n"
    ]
   }
  ],
