--- a/English Chapters/1_What_is_quantum.ipynb
+++ b/English Chapters/1_What_is_quantum.ipynb
@@ -6,20 +6,20 @@
    "source": [
     "## 1. What is Quantum?\n",
     "\n",
+    "Before we can talk about quantum computing, we first have to understand the basic concepts of quantum that make it work. \n",
+    "\n",
     "### 1.1 Common misconceptions about quantum \n",
     " \n",
-    "In science fiction the adjective quantum is often used to explain how a technology that seems to defy the laws of physics works. In the 2018 superhero movie *Ant-Man*, the protagonist is able to access this realm by becoming smaller and smaller until they enter the mysterious *Quantum Realm*, described as “a reality where all concepts of time and space become irrelevant”. \n",
+    "In science fiction *quantum* is often used to explain away a technology that seems to defy the laws of physics. In the 2018 superhero movie *Ant-Man*, the protagonist is able to become smaller and smaller until they enter the mysterious *Quantum Realm*, described as “a reality where all concepts of time and space become irrelevant”. \n",
     "\n",
-    "If this was how subatomic physics worked, there would be no subatomic physics. $*$\n",
+    "If this was how subatomic physics worked, there would be no subatomic physics $^*$.\n",
     "\n",
-    "Quantum mechanics is described by the Schrödinger equation that is built on space and time. Quantum physics has some differences to classical physics, the physics everyone is used to experiencing in everyday life. Quantum it is not some magical concept which allows for anything that violates classical physics to be explained away. There are however, some small but significant quirks of quantum mechanics that allow for the development of new technologies. \n",
-    "\n",
-    "$^*$ Below about $10^{-35}$ m, the Planck length, even quantum mechanics fails to provide a complete description of physics and so describing what would be observed at such a scale is beyond what physics can say for now. \n",
+    "Quantum mechanics is described by the Schrödinger equation that is built on space and time. There are some differences to classical physics, the physics everyone is used to experiencing in everyday life. Quantum it is not some magical concept which allows for anything that violates classical physics to be explained away. There are however, some small but significant quirks of quantum mechanics that allow for the development of new technologies. \n",
     "\n",
     "\n",
     "### 1.2 How many physicists does it take to change a lightbulb?\n",
     "\n",
-    "In the early 20th century, a German physicist (by the cool name of Max Planck) was tasked with modelling the emission of light from a filament bulb (basically a wire that gets hot enough to glow). He came up with what is known as the black body radiation spectrum. You may be wondering why such trivia has been included in a textbook about quantum computing. It turns out, from his model, the energy emitted by an object with a finite temperature is not emitted in a continuous spectrum. That's to say rather than all possible wavelengths of light being emitted by this bulb only certain wavelengths were allowed. This is known as a discrete spectrum. What this in turn means is that energy is emitted are chunks, or *quanta*, with a well-defined energy. We can't have energy between these chunks. It's a bit like taking the lift (elevator in American English). One can only get on or off the lift at specific heights corresponding to the floor level. Each floor is seperated by a distance and the lift can go up or down in any multiple of these distances limited by the number of floors. In between those levels the doors of the lift won't open. \n",
+    "In the early 20th century, a German physicist (by the cool name of Max Planck) was tasked with modelling the emission of light from a filament bulb (basically a wire that gets hot enough to glow). He came up with what is known as the black body radiation spectrum. It turns out, from his model, the energy emitted by an object with a finite temperature is not emitted in a continuous spectrum. That's to say rather than all possible wavelengths of light being emitted by this bulb only certain wavelengths were allowed. This is known as a discrete spectrum. What this in turn means is that energy is emitted are chunks, or *quanta*, with a well-defined energy. We can't have energy between these chunks. It's a bit like taking the lift (elevator in American English). One can only get on or off the lift at specific heights corresponding to the floor level. Each floor is seperated by a distance and the lift can go up or down in any multiple of these distances limited by the number of floors. In between those levels the doors of the lift won't open. \n",
     "\n",
     "This concept of quantisation of energy is where the quantum comes from. Whilst this concept is less significant to quantum computing, it is still worth mentioning. The reason for this is that the transistor that powers all digital electronics is built upon this concept. Thus all computations using this technology (the integrated circuit) are computers running on quantum mechanics. Which is not to say they are quantum computers simply that they are fundamentally built upon quantum physics, as are you, I, and everything we can see and touch. \n",
     "\n",
@@ -68,6 +68,8 @@
     "\n",
     "These are devices that take advantage of the aforementioned phenomena for practical applications to do something better than what can be done without using them. Quantum computation is one of the most exciting quantum technologies even if it is much less mature than others like quantum metrology (sensing) and encryption (communications).\n",
     "\n",
+    "\n",
+    "$^*$ Below about $10^{-35}$ m, the Planck length, even quantum mechanics fails to provide a complete description of physics and so describing what would be observed at such a scale is beyond what physics can say for now. \n",
     "\n",
     "## Chapter 1 Summary \n",
     "\n",
