--- a/English Chapters/2_What_is_quantum_computing.ipynb
+++ b/English Chapters/2_What_is_quantum_computing.ipynb
@@ -15,15 +15,19 @@
    "source": [
     "### 2.1 More than flipping coins \n",
     "\n",
-    "The example of coins being flipped can be helpful in explaining how quantum effects behave but it would be rather impractical to use coins as a method of quantum information processing: quantum computation. There are a few obvious reasons for this: \n",
+    "The example of coins being flipped can be helpful in explaining how quantum effects behave but it would be rather impractical to use coins as a method of quantum computation. There are a few obvious reasons for this: \n",
     "\n",
-    "- Flipping coins is not very fast. Conventional computers (CPUs) have a clock speed in the GHz or billions of complete clock cycles per second. We would need an astronomical number of coins to try and replicate that. \n",
+    "- Flipping coins is not very fast. Modern computers have clock speeds in the GHz or billions of complete clock cycles per second. We would need an astronomical number of coins to try and replicate that. \n",
     "\n",
     "- Flipping coins can only really be used to generate random numbers. Beyond the conventional deterministic computing operations we can already do, the only real advantage from quantum theory would be the 'random' nature of the coin flips. \n",
     "\n",
     "- Sticking coins together is even slower than just flipping them. Not to mention the part where they get shuffled in a pseudorandom way. \n",
     "\n",
-    "In other words, a practical quantum computer would, as one might expect, need to be a quantum system that can be controlled effectively and efficiently to carry out useful computations. There must be a precise control which allows for more than creating the superposition state if applications beyond random generation are to be realised.  "
+    "In other words, a practical quantum computer would need to be more like a conventional computer: \n",
+    "\n",
+    "- Perform operations on qubits quickly \n",
+    "- Have a precise control over the probabilities \n",
+    "- Be able to effectively control multiple qubits at once "
    ]
   },
   {
@@ -36,9 +40,7 @@
     "\n",
     "Computers work by executing logical operations (think addition/subtraction/multiplication/...) that take the machine from a starting point to a finishing point. The starting point that is fed into the computer is congenitally known as the input and what the computer ends up with is usually referred to as the output. An *algorithm* is a set of instructions that allow the computer to take the input and generate an output. For example, an algorithm for doubling a number could take an input of 3, multiply it by 2 and return an output of 6. \n",
     "\n",
-    "Going back to the coins here, this is a bit like laying them out in a row and then proceeding to shuffle and flip the coins according to a script that allows something to be done. For example, you could add 2 numbers expressed in binary by following a simple series of rules that allows for addition. This is not too dissimilar to using an abacus as a calculator. Since the advent of the digital computer in the 1940's, these operations have been carried out by increasingly advanced machines to greater and greater success. \n",
-    "\n",
-    "This description of computation is woefully inaccurate by modern standards, but it suffices to outline the basic fundamentals and is sufficient to motivate the use of quantum systems.\n"
+    "Going back to the coins here, this is a bit like laying them out in a row and then proceeding to shuffle and flip the coins according to a script that allows something to be done. For example, you could add 2 numbers expressed in binary by following a simple series of rules that allows for addition. This is not too dissimilar to using an abacus as a calculator. Since the advent of the digital computer in the 1940's, these operations have been carried out by increasingly advanced machines to do more complex computations a lot faster."
    ]
   },
   {
@@ -51,11 +53,13 @@
     "\n",
     " For both machines, they execute algorithms that take an input and generate outputs in a similar manner. Whilst they are both excellent at solving a great many problems, there are two things they can't handle so well: superposition & entanglement. \n",
     "\n",
-    " Starting with a simple coin toss there are 2 possible outcomes. If we add a second coin there are 4 possible outcomes (HH, HT, TH, TT). As more and more coins are added to the tosser, the number of possible outcomes, $N$, grows as $N = 2^n$. If we had 300 coins, that would mean a single coin toss has more possible outcomes than we estimate the total number of atoms in the universe. That's roughly 2 followed by 90 0's different combinations of H & T. Now imagine tossing these coins 300 times...\n",
+    " Starting with a simple coin toss there are 2 possible outcomes. If we add a second coin there are 4 possible outcomes (HH, HT, TH, TT). As more and more coins are added, the number of possible outcomes doubles with each coin that is added. This number $N$, grows as $N = 2^n$. If we had 300 coins, that would mean a single toss has more possible outcomes than we estimate the total number of atoms in the universe. That's roughly 2 followed by 90 0's different combinations of H & T. Now imagine tossing these coins 300 times...\n",
     "\n",
-    " A quantum computer could handle this problem easily. Instead of needing a universe of atoms, 300 qubits *of sufficiently high quality* would be enough to run a quantum algorithm that could simulate these coins (including any fancy sticking of them together) to arbitrary precision. \n",
+    " A quantum computer could handle this problem easily. Instead of needing a universe of atoms, 300 qubits *of sufficiently high quality* would be enough to run a quantum algorithm that could simulate these coins (including sticking of them together) to arbitrary precision. \n",
     "\n",
-    " Quantum algorithms are similar to the input and output of classical algorithms but with the addition of superposition and entanglement in the middle. If an algorithm doesn't feature these two concepts, a classical solution will outperform any quantum computer any time.\n"
+    " Quantum algorithms are similar to the input and output of classical algorithms but with the addition of superposition and entanglement in the middle.  If an algorithm doesn't feature superposition & entanglement, it would always be better to use the classical computer. \n",
+    "\n",
+    " > Quantum computers are __*not*__ faster versions of regular computers"
    ]
   },
   {
@@ -66,7 +70,6 @@
     "\n",
     "If our conventional computers perform so many tasks better, there must be some motivation for quantum computing being such an exciting area of research. Aside from the elegance of manipulating quantum states, quantum computing is expected to be more useful than a glorified coin tossing simulator. Despite the limitations in state-of-the-art quantum computing machines, it is known of a few valuable applications where quantum algorithms *theoretically outperform* the best availible classical solution. In these specific applications it is said there is a proven *quantum advantage* as using the quantum computer derives some benefit to the user for that application. \n",
     "\n",
-    "\n",
     "Whether or not it is worth using a quantum computer for a specific task is a very complicated question. It is not as simple as finding out if a quantum computer is faster but also whether the output of the quantum computer is better than what could have been done with conventional algorithms on a powerful classical computer. \n",
     "\n",
     "There are a few different ways a quantum computer could add value: \n",
@@ -76,25 +79,25 @@
     "- Consume less energy and thus cost less to run \n",
     "- Enable entirely new models & solutions to solve problems that previously couldn't be solved\n",
     "\n",
-    "\n",
-    "As of the time of writing, there has been no practical demonstration of a problem with real world (outside experimental physics) problem where using a quantum computer was better than using the tried and tested classical solution. As quantum computers become increasingly powerful it is hoped that this threshold will be crossed in the next few years...\n",
+    "As of the time of writing, there has been no practical demonstration of a problem with real world (outside physics) problem where using a quantum computer was better than using the best classical solution. As quantum computers become increasingly powerful it is hoped that this threshold will be crossed in the next few years...\n",
     "\n",
     "> TODO: include graph on quantum speedups\n",
     "\n",
     "### 2.5 Applications of Quantum Computing \n",
     "\n",
-    "There are a great many practical difficulties in implementing QC. Even still, last year [over $3 billion was invested into quantum computing](https://www.mckinsey.com/business-functions/mckinsey-digital/our-insights/quantum-computing-funding-remains-strong-but-talent-gap-raises-concern). Why is there so much hype around such an early-stage technology? \n",
+    "There are a great many practical difficulties in implementing QC. Even still, in 2021 [over $3 billion was invested into quantum computing](https://www.mckinsey.com/business-functions/mckinsey-digital/our-insights/quantum-computing-funding-remains-strong-but-talent-gap-raises-concern). Why is there so much hype around such an early-stage technology? \n",
     "\n",
     "There are many industries expecting significant value creation from quantum computing: \n",
     "\n",
     "- Pharmaceuticals: Develop better medicine by simulating drugs more quickly & accurately  \n",
-    "- Supply chain & logistics: Quantum computing to optimise supply chains \n",
+    "- [Supply chain & logistics](https://www.youtube.com/watch?v=jA7iopqDm94): Quantum computing to optimise supply chains \n",
     "- Finance: Portfolio optimisation & fraud detection by simulation of stochastic variables\n",
     "- Enviornmental: Simulation of chemistry for batteries, solar cells & materials\n",
     "- Science: Simulation of quantum systems to better understand the universe\n",
     "\n",
-    "In addition to potential direct impacts, there are a lot of potential benefits to developing the hardware. Being able to measure qubits better can help develop quantum sensors with applications in healthcare & navigation. \n",
+    "Across each of these areas, there are multiple established companies and startups developing quantum solutions. It is expected that the combined value creation by 2030 will be in the $10's of billions. \n",
     "\n",
+    "In addition to potential direct impacts, there are a lot of potential benefits to developing the hardware. Being able to measure qubits better can help develop quantum sensors with applications in healthcare & navigation. \n",
     "\n",
     "### 2.6 Similarities to machine learning \n",
     "\n",
@@ -109,7 +112,6 @@
     "It's an open question as to whether or not quantum computing can improve machine learning. Given the very limited number (& quality) of qubits availible there haven't been any large-scale tests yet. This is likely to change in the near future...\n",
     "\n",
     "## Chapter 2 Summary \n",
-    "\n",
     "\n",
     "- Quantum computers are more than just random objects that have superposition\n",
     "- Algorithms are a set of instructions that we give a computer to process information \n",
