Exercises #5 Added solutions for 5.2, 5.3

--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -49,7 +49,7 @@
     "A useful tool for understanding the Bloch sphere [can be found here](https://javafxpert.github.io/grok-bloch/)\n",
     "\n",
     "---\n",
-    "### Exercise 5.1 \n",
+    "### Exercise 5.1: Where on the sphere\n",
     "\n",
     "We know the superposition state $\\ket{+}$ has equal probabilities of $\\ket{0}$ & $\\ket{1}$. Where on the Bloch sphere would this state be represented? What is the angle $\\theta$ that would describe this state?\n",
     "\n",
@@ -105,17 +105,19 @@
     "\n",
     "So if we apply $H$ once to $\\ket{0}$ we get $\\ket{+}$ and then applying it again goes back to $\\ket{0}$. \n",
     "\n",
+    "This implies applying $H$ twice does nothing. $H^2 = I$.\n",
+    "\n",
     "So if we ever have $\\ket{+}$ we apply $H$ and get $\\ket{0}$ 100% of the time. If we get $\\ket{1}$ we must have had another state to begin with. If we had $\\ket{-}$ would measure 1 100% of the time. \n",
     "\n",
     "---\n",
     "\n",
-    "### Exercise 5.2\n",
+    "### Exercise 5.2 Back to the start\n",
     "\n",
     "Apply $H$ twice to $\\ket{1}$ and verify that it returns back $\\ket{1}$. \n",
     "\n",
-    "### Exercise 5.3\n",
+    "### Exercise 5.3 The coin doesn't work\n",
     "\n",
-    " When we apply the Hadamard twice to a state, we get the same state back. Without doing any maths, consider flipping a coin. Why does flipping the coin twice not guarantee you get back the side you started with?\n",
+    " When we apply the Hadamard twice to a state, we get the same state back. Without doing any maths, consider throwing a coin. Why does throwing the coin twice not guarantee you get back the side you started with?\n",
     "\n",
     "---\n",
     "\n",
