--- a/English Chapters/solutions.ipynb
+++ b/English Chapters/solutions.ipynb
@@ -66,6 +66,31 @@
     "\n",
     "Computing each probability for every amplitude is not too much work when there are only 6 possible outcomes. But imagine instead if there were a million possible outcomes. Then we would need to compute a million different probabilities. A million outcomes might sound like lot, nobody has a million sided dice lying around,  but that can be achieved with just 20 qubits. Rather than compute the expectation value by computing each probability one by one, we can use vectorisation to parallelise this computation using operators. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Chapter 5 Single Qubits \n",
+    "\n",
+    "### 5.1 Where on the sphere\n",
+    "\n",
+    "### 5.2 Back to the start\n",
+    "\n",
+    "The same as before:\n",
+    "\n",
+    "$$ H\\ket{-} = H \\frac{1}{\\sqrt{2}} ( \\ket{0} - \\ket{1})$$\n",
+    "\n",
+    "$$= \\frac{1}{\\sqrt{2}} (H\\ket{0} - H\\ket{1})$$\n",
+    "\n",
+    "$$ = \\frac{1}{\\sqrt{2}}\\left( \\frac{1}{\\sqrt{2}}(\\ket{0} - \\ket{1})+\\frac{1}{\\sqrt{2}}(\\ket{0} - \\ket{1}))  \\right)$$\n",
+    "\n",
+    "### 5.3 The coin doesn't work!\n",
+    "\n",
+    "When we throw the coin, we get a 50/50 chance of heads or tails. Whatever the outcome of that throw, even if we don't reveal the coin, throwing it again will still have the 50/50 chance. \n",
+    "\n",
+    "Throwing a coin any number of times is the same as throwing it once. "
+   ]
   }
  ],
  "metadata": {
