#5 Added binary questions

--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -20,6 +20,8 @@
     "\\ket{0} = \\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} ; \\ket{1} = \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix} \n",
     "$$\n",
     "\n",
+    "These two states are called the computational basis\n",
+    "\n",
     "Just as with the coins, our qubits can be in a superposition of $\\ket{0}$ & $\\ket{1}$. We can have any probability of measuring $\\ket{0}$ & $\\ket{1}$ (so long as all the probabilities are real positive numbers which add to 1). \n",
     "\n",
     "\n",
