--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -54,6 +54,26 @@
     "\n",
     "Here we needed at least 6 digits in binary to represent a number with 2 digits in decimal. The decimal notation is much more efficient. \n",
     "\n",
+    "### Exercise 6.1 \n",
+    "\n",
+    "What would the following numbers be in decimal?\n",
+    "\n",
+    "a. 1111\n",
+    "\n",
+    "b. 1001\n",
+    "\n",
+    "c. 101101\n",
+    "\n",
+    "d. 0110\n",
+    "\n",
+    "### Exercise 6.2\n",
+    "\n",
+    "What would the following numbers be in binary? \n",
+    "\n",
+    "a. 1 \n",
+    "b. 5\n",
+    "c.6\n",
+    "\n",
     "### 6.2.2 Reading quantum states \n",
     "\n",
     "Let's say we wanted to encode the number 5 onto a quantum state. \n",
