--- a/English Chapters/solutions.ipynb
+++ b/English Chapters/solutions.ipynb
@@ -51,8 +51,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ">>>>>>>>>> Figure out where to put this \n",
-    "\n",
     "\n",
     "The exercise *4.2* can be done instead by introducing an operator. We can define the number operator $N$ which multiplies the state by the number it is in. So for instance \n",
     "\n",
@@ -89,7 +87,13 @@
     "\n",
     "When we throw the coin, we get a 50/50 chance of heads or tails. Whatever the outcome of that throw, even if we don't reveal the coin, throwing it again will still have the 50/50 chance. \n",
     "\n",
-    "Throwing a coin any number of times is the same as throwing it once. "
+    "Throwing a coin any number of times is the same as throwing it once. \n",
+    "\n",
+    "## Chapter 6 Multiple Qubits\n",
+    "\n",
+    "### 6.1 Convert from binary\n",
+    "\n",
+    "### 6.2 Convert to binary "
    ]
   }
  ],
