#3 Started QML section

--- a/English Chapters/12_QML.ipynb
+++ b/English Chapters/12_QML.ipynb
@@ -6,18 +6,44 @@
    "source": [
     "# Quantum Machine Learning \n",
     "\n",
-    "### What is Machine Learning \n",
+    "<!-- ### What is Machine Learning \n",
     "\n",
     "In recent decades the rapid development of cheap and powerful classical processing units has transformed all aspects of society. Artificial intelligence has been pondered by humanity from as far back as the 1800's but has remained the realm of science fiction until numerous great advances in the capability of computers has facilitated many implementations of AI across various industries from medicine to the military. \n",
     "\n",
-    "Many of these AI technologies are based on machine learning \n",
+    "Many of these AI technologies are based on machine learning  -->\n",
     "\n",
     "### Why machine learning could benefit from a quantum advantage\n",
     "\n",
+    "Quantum computers offer analogues\n",
     "\n",
     "\n",
+    "### Variants of QML \n",
     "\n",
-    "\n"
+    "### VQE\n",
+    "\n",
+    "The variational quantum eigensolver is one of the most well-known quantum algorithms. \n",
+    "\n",
+    "### QAOA \n",
+    "\n",
+    "### Quantum SVM \n",
+    "\n",
+    "## Additional considerations\n",
+    "\n",
+    "There are quite a few things to consider with QML \n",
+    "\n",
+    "- There are no proven advantages to using QML over classical ML \n",
+    "- Quantum computers struggle to load large classical datasets \n",
+    "- Many proposed quantum algorithms depend on quantum ram, which has yet to be scaled and integrated into QPUs. \n",
+    "- There is significant academic skepticsm, even in commpanies that promote QML\n",
+    "\n",
+    "- If a classical ML solution works perfectly well for a given problem, it is much better to use that than a quantum version. \n",
+    "\n",
+    "\n",
+    "Some optimism: \n",
+    "\n",
+    "Quantum machine learning is still a very new field. It may take quite some time to offer benefits, but that doesn't mean it isn't worth exploring. \n",
+    "\n",
+    "QML has [shown to be effective](https://www.science.org/doi/10.1126/science.abn7293) in learning from experiments on quantum systems. \n"
    ]
   }
  ],
