--- a/English Chapters/3.2_Linear_algebra.ipynb
+++ b/English Chapters/3.2_Linear_algebra.ipynb
@@ -4,14 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3 Part 2 The mathematical minimum: Linear Algebra\n",
+    "# 3 Part 2 Linear Algebra\n",
     "\n",
     "The second part of chapter 3 will cover linear algebra. Linear algebra is the framework for quantum computing, so it is very important to be familiar with. \n",
     "\n",
-    "## 3.2 Linear Algebra \n",
-    "\n",
     "Like trigonometry, linear algebra underpins most of physics, engineering and computer science. Its importance is difficult to overstate. In 1939, Paul Dirac reformulated quantum mechanics using linear algebra [1]. Linear algebra is so important that this way of descibing quantum mechanics is known as matrix mechanics. There are two key elements to linear algebra: vectors and matrices. \n",
-    "\n",
     "\n",
     "### 3.2.1 Vectors\n",
     "\n",
@@ -21,11 +18,8 @@
     "\n",
     "What makes vectors useful to work with is the fact that a vector has components. These are the individual magnitudes of the vector in each direction. We can encode the speed of the car along the road ($v_{alon}$)and the speed of the car across the road ($v_{acro}$) in a vector with two components: \n",
     "\n",
-    "\n",
     "$$\n",
-    "\\ket{v} = \n",
-    "\\begin{bmatrix}\n",
-    "v_{alon} \\\\ v_{acro}\n",
+    "\\ket{v} = \\begin{bmatrix}v_{alon} \\\\ v_{acro}\n",
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
