--- a/English Chapters/8_Quantum_algorithms.ipynb
+++ b/English Chapters/8_Quantum_algorithms.ipynb
@@ -17,15 +17,30 @@
     "\n",
     "For example, adding two n-digit numbers will require on the order of n operations. Multiplication \n",
     "\n",
-    "### 8.2 Types of quantum algorithms \n",
+    "### 8.2 Quantum computers now and of the future\n",
+    "\n",
+    "### 8.3 Types of quantum algorithms \n",
     "\n",
     "Fault-tolerant quantum algorithms \n",
     "NISQ quantum algorithms \n",
     "Variational quantum algorithms \n",
     "\n",
-    "### 8.3 Practical considerations \n",
+    "### 8.4 How much do we need?\n",
     "\n",
+    "It is extremely important to keep track of the resource requirements for any quantum algorithm. \n",
     "\n",
+    "If it turns out that an algorithm requires thousands of qubits with circuit depths in the thousands, or millions, this will not be feasable with a quantum computer in the next decade. \n",
+    "\n",
+    "Across many of the proposed quantum algorithms, significant work has been done in reducing the requirements. This can be done by making circuits more efficient- using fewer gates and fewer qubits.  It is hoped that continued progress in circuit optimisation and improved hardware specifications will allow for better quantum algorithms to be implemented in the near-term. \n",
+    "\n",
+    "### 8.5 Practical considerations \n",
+    "\n",
+    "- Try a small-scale proof of concept project first \n",
+    "    - Small scale QC can be simulated on a classical computer. This can be a lot cheaper than buying access to an expensive QPU\n",
+    "\n",
+    "- Does the problem require QC?\n",
+    "    - Quantum computing is a rather exotic solution proposed largerly for problems tackled by supercomputers. Consider more conventional solutions before trying quantum\n",
+    "    - How strong is the evidence that QC has an advantage for this problem. \n",
     "\n",
     "- Hardware \n",
     "\n",
@@ -33,9 +48,17 @@
     "    - Quality of qubits (can you trust the answer)\n",
     "    - Pricing/ availibility (can you afford it)\n",
     "    - Software features/support (how easy is it to use, does it support optimisation of quantum circuits ect)\n",
+    "        - As the technology develops, pricing will become more competitive\n",
     "\n",
     "\n",
-    "### 8.4 Limitations of quantum computing "
+    "\n",
+    "### 8.4 Limitations of quantum computing \n",
+    "\n",
+    "- Quantum computers are very small scale. As of the time of writing, the gate-based quantum processing unit (QPU) with the most qubits has 127 qubits.\n",
+    "- Current QPU's have high error rates. [INSERT FIGURE]\n",
+    "- Quantum computing is very expensive [Reference]\n",
+    "\n",
+    "- QC is not a solution to every problem. For the vast majority of computational tasks, there is no proposed quantum algorithm. Thus, the vast majority of consumers are unlikely to benefit from QC in the medium term."
    ]
   }
  ],
