Uniform exercise style

--- a/English Chapters/3.2_Linear_algebra.ipynb
+++ b/English Chapters/3.2_Linear_algebra.ipynb
@@ -58,23 +58,21 @@
     "a \\ket{v} = a\\begin{bmatrix} v_0 \\\\ v_1 \\\\ \\vdots \\\\ v_{n-1} \\end{bmatrix} = \\begin{bmatrix} a \\times v_0 \\\\ a \\times v_1 \\\\ \\vdots \\\\ a \\times v_{n-1} \\end{bmatrix} \n",
     "$$\n",
     "\n",
-    "### Exercise 3.1 \n",
-    "\n",
-    "Imagine the vector $\\ket{v}$ given by \n",
-    "\n",
-    "$$\n",
-    "\\ket{v} = \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "i. What is the $0^{th}$ component of $\\ket{v}$ ? What about the $1^{st}$ component?\n",
-    "\n",
-    "ii. Write $\\ket{v}$ in the form \n",
-    "\n",
-    "$$\n",
-    "\\ket{v} = a\\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} + b \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "iii. Write down the vector $5\\ket{v}$ and describe what has changed to the vector\n",
+    ">### Exercise 3.1 \n",
+    ">\n",
+    ">Imagine the vector $\\ket{v}$ given by \n",
+    ">\n",
+    ">$$\\ket{v} = \\begin{bmatrix} 2 \\\\ 1 \\end{bmatrix}$$\n",
+    ">\n",
+    ">i. What is the $0^{th}$ component of $\\ket{v}$ ? What about the $1^{st}$ component?\n",
+    ">\n",
+    ">ii. Write $\\ket{v}$ in the form \n",
+    ">\n",
+    ">$$\n",
+    ">\\ket{v} = a\\begin{bmatrix} 1 \\\\ 0 \\end{bmatrix} + b \\begin{bmatrix} 0 \\\\ 1 \\end{bmatrix}\n",
+    ">$$\n",
+    ">\n",
+    ">iii. Write down the vector $5\\ket{v}$ and describe what has changed to the vector\n",
     "\n",
     "### 3.2.4 The inner product  \n",
     "\n",
@@ -115,37 +113,37 @@
     "\n",
     "\n",
     "\n",
-    "### Exercise 3.2 \n",
+    ">### Exercise 3.2 \n",
+    ">\n",
+    ">Let the vector $\\ket{q}$ be given as \n",
+    ">\n",
+    ">$$ \\ket{q} = \\frac{1}{4} \\begin{bmatrix} -3 \\\\ 4 \\end{bmatrix} $$\n",
+    ">\n",
+    ">i. Using $\\ket{v}$ from the last exercise, compute \n",
+    ">\n",
+    ">$$ \\ket{y} = \\ket{v} + \\ket{q} $$\n",
+    ">\n",
+    ">ii. Compute the inner product $ \\braket{q | v} $\n",
+    ">\n",
+    ">iii. Compute the inner product $ \\braket{v | q} $ \n",
+    ">\n",
+    ">iv. Bonus question: Compare your answers for ii. & iii. Explain any differences, if any, or why there is no difference. Does this hold for all pairs of vectors?\n",
+    ">\n",
+    ">v. Using the result from either ii. or iii. are the vectors $\\ket{v}$ & $\\ket{q}$ perpendicular?\n",
     "\n",
-    "Let the vector $\\ket{q}$ be given as \n",
     "\n",
-    "$$ \\ket{q} = \\frac{1}{4} \\begin{bmatrix} -3 \\\\ 4 \\end{bmatrix} $$\n",
-    "\n",
-    "i. Using $\\ket{v}$ from the last exercise, compute \n",
-    "\n",
-    "$$ \\ket{y} = \\ket{v} + \\ket{q} $$\n",
-    "\n",
-    "ii. Compute the inner product $ \\braket{q | v} $\n",
-    "\n",
-    "iii. Compute the inner product $ \\braket{v | q} $ \n",
-    "\n",
-    "iv. Bonus question: Compare your answers for ii. & iii. Explain any differences, if any, or why there is no difference. Does this hold for all pairs of vectors?\n",
-    "\n",
-    "v. Using the result from either ii. or iii. are the vectors $\\ket{v}$ & $\\ket{q}$ perpendicular?\n",
-    "\n",
-    "\n",
-    "### Exercise 3.3\n",
-    "\n",
-    "Compute the inner product for the vectors \n",
-    "\n",
-    "$$ \\ket{w} = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} i \\\\ 1 \\end{bmatrix} ; \\ket{z} = \\frac{1}{\\sqrt{3}} \\begin{bmatrix} \\sqrt{2} \\\\ i \\end{bmatrix}$$\n",
-    "\n",
-    "i. $\\braket{w|z}$\n",
-    "\n",
-    "ii. $\\braket{z|w}$\n",
-    "\n",
-    "iii. Bonus question: Compare i. ii. . Is the result the same as from Exercise 3.2 iv? \n",
-    "If not, what has changed?\n",
+    ">### Exercise 3.3\n",
+    ">\n",
+    ">Compute the inner product for the vectors \n",
+    ">\n",
+    ">$$ \\ket{w} = \\frac{1}{\\sqrt{2}} \\begin{bmatrix} i \\\\ 1 \\end{bmatrix} ; \\ket{z} = \\frac{1}{\\sqrt{3}} \\begin{bmatrix} \\sqrt{2} \\\\ i \\end{bmatrix}$$\n",
+    ">\n",
+    ">i. $\\braket{w|z}$\n",
+    ">\n",
+    ">ii. $\\braket{z|w}$\n",
+    ">\n",
+    ">iii. Bonus question: Compare i. ii. . Is the result the same as from Exercise 3.2 iv? \n",
+    ">If not, what has changed?\n",
     "\n",
     "### 3.3.1 Matrices\n",
     "\n",
@@ -230,17 +228,16 @@
     "\n",
     "### 3.3.4 Unitary matrices \n",
     "\n",
-    "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose. \n",
+    "For all quantum gates, an important property they have is that they are unitary. Unitary matrices have an inverse equal to their conjugate transpose (the dagger at the top).\n",
     "\n",
     "This means \n",
     "\n",
-    "$$\n",
-    "U^\\dagger U = I \n",
-    "$$\n",
+    "$$ U^\\dagger U = I $$\n",
+    "\n",
+    "The conjugate transpose is the same process as it is to turn a ket (column vector) into a bra (row vector). Take You swap the rows and the columns and then replace every imaginary number with the negative version. \n",
     "\n",
     "All quantum gates are unitary matrices, it is very common to see the term unitary when talking about any quantum circuit. \n",
     "\n",
-    "The conjugate transpose is the same process as it is to turn a ket (column vector) into a bra (row vector). Take You swap the rows and the columns and then replace every imaginary number with the negative version. \n",
     "\n",
     "### Chapter 3 Part 2 Summary \n",
     "\n",
