--- a/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
+++ b/English Chapters/5_Single_Qubits_&_Bloch_Sphere.ipynb
@@ -50,12 +50,10 @@
     "\n",
     "A useful tool for understanding the Bloch sphere [can be found here](https://javafxpert.github.io/grok-bloch/)\n",
     "\n",
-    "---\n",
-    "### Exercise 5.1: Where on the sphere\n",
     "\n",
-    "We know the superposition state $\\ket{+}$ has equal probabilities of $\\ket{0}$ & $\\ket{1}$. Where on the Bloch sphere would this state be represented? What is the angle $\\theta$ that would describe this state?\n",
-    "\n",
-    "---\n",
+    ">### Exercise 5.1: Where on the sphere\n",
+    ">\n",
+    ">We know the superposition state $\\ket{+}$ has equal probabilities of $\\ket{0}$ & $\\ket{1}$. Where on the Bloch sphere would this state be represented? What is the angle $\\theta$ that would describe this state?\n",
     "\n",
     "## 5.3 It's not just a phase!\n",
     "\n",
@@ -111,17 +109,15 @@
     "\n",
     "So if we ever have $\\ket{+}$ we apply $H$ and get $\\ket{0}$ 100% of the time. If we get $\\ket{1}$ we must have had another state to begin with. If we had $\\ket{-}$ would measure 1 100% of the time. \n",
     "\n",
-    "---\n",
     "\n",
-    "### Exercise 5.2 Back to the start\n",
+    ">### Exercise 5.2 Back to the start\n",
+    ">\n",
+    ">Apply $H$ twice to $\\ket{1}$ and verify the state we end up with is $\\ket{1}$. \n",
     "\n",
-    "Apply $H$ twice to $\\ket{1}$ and verify that it returns back $\\ket{1}$. \n",
+    ">### Exercise 5.3 The coin doesn't work\n",
+    ">\n",
+    "> When we apply the Hadamard twice to a state, we get the same state back. Without doing any maths, consider throwing a coin. Why does throwing the coin twice not guarantee you get back the side you started with?\n",
     "\n",
-    "### Exercise 5.3 The coin doesn't work\n",
-    "\n",
-    " When we apply the Hadamard twice to a state, we get the same state back. Without doing any maths, consider throwing a coin. Why does throwing the coin twice not guarantee you get back the side you started with?\n",
-    "\n",
-    "---\n",
     "\n",
     "In this example, where is the phase? \n",
     "\n",
@@ -171,9 +167,7 @@
     "A more compresnsive list of gates [can be found here](https://raw.githubusercontent.com/qiskit-community/qiskit-textbook/main/content/ch-states/supplements/single-gates-cheatsheet.pdf) \n",
     "## 5.5 Parameterised quantum gates \n",
     "\n",
-    "In addition to these fixed quantum gates, there are quantum gates we can specify ourselves. These gates are described by a parameter we can control to change what the gate does. \n",
-    "\n",
-    "\n",
+    "In addition to these fixed quantum gates, there are quantum gates we can specify ourselves. These gates are described by a parameter we can control to change what the gate does. These gates are very similar to nodes in a neural network where we can change the weights (we will see a lot more about these in a chapter on quantum machine learning).\n",
     "\n",
     "\n",
     "\n",
