--- a/English Chapters/6_Multiple_Qubits.ipynb
+++ b/English Chapters/6_Multiple_Qubits.ipynb
@@ -54,25 +54,27 @@
     "\n",
     "Here we needed at least 6 digits in binary to represent a number with 2 digits in decimal. The decimal notation is much more efficient. \n",
     "\n",
-    "### Exercise 6.1 \n",
+    ">### Exercise 6.1 \n",
+    ">\n",
+    ">What would the following numbers be in decimal?\n",
+    ">\n",
+    ">a. 1111\n",
+    ">\n",
+    ">b. 1001\n",
+    ">\n",
+    ">c. 101101\n",
+    ">\n",
+    ">d. 0110\n",
     "\n",
-    "What would the following numbers be in decimal?\n",
-    "\n",
-    "a. 1111\n",
-    "\n",
-    "b. 1001\n",
-    "\n",
-    "c. 101101\n",
-    "\n",
-    "d. 0110\n",
-    "\n",
-    "### Exercise 6.2\n",
-    "\n",
-    "What would the following numbers be in binary? \n",
-    "\n",
-    "a. 1 \n",
-    "b. 5\n",
-    "c.6\n",
+    ">### Exercise 6.2\n",
+    ">\n",
+    ">What would the following numbers be in binary? \n",
+    ">\n",
+    ">a. 1 \n",
+    ">\n",
+    ">b. 5\n",
+    ">\n",
+    ">c.6\n",
     "\n",
     "### 6.2.2 Reading quantum states \n",
     "\n",
@@ -86,24 +88,25 @@
     "\n",
     "$$ \\ket{101} = \\ket{q_2q_1q_0} $$\n",
     "\n",
-    "Here we use the convention where the first qubit ($2^0$) is on the right, with the next qubit one to the left and the last qubit the most to the right. \n",
+    "Here we use the convention where the first qubit ($2^0$) is on the right, with the next qubit one to the left and the last qubit the most to the right. This is what IBM uses and what we will use when programming quantum computers.\n",
     "\n",
-    "> Quantum states are read right-to-left with the first qubit at the end\n",
+    "> Quantum states are read right-to-left with the first qubit next to the >\n",
     "\n",
     "### 6.2.3 Column vectors for multiple qubits \n",
     "\n",
     "Keeping with the number 5, the state vector for this number \n",
     "\n",
+    "$$ \\ket{5} = \\ket{101} = \\begin{bmatrix} 0 \\\\ 0\\\\ 0\\\\ 0\\\\ 0\\\\ 1\\\\0\\\\0 \\end{bmatrix} $$\n",
+    "\n",
     "## 6.3 Multiple qubits, multiple gates \n",
     "\n",
-    "Before discussing the more exotic case of entanglement, it is worth generalising the case of single qubit gates to multiple qubits. \n",
     "\n",
-    "If we have multiple qubits, we can apply single qubit gates on all of them seperately. This follows the same rules as with single qubits. \n",
+    "If we have multiple qubits, we can apply single qubit gates on each of them at a time. This is the same as having a bunch of single qubits on their own, each having their state changed by the qubit gate. \n",
     "\n",
+    "The simplest case is two qubits.\n",
     "\n",
     "\n",
     "## 6.4 Product States \n",
-    "\n",
     "\n",
     "So far we have acted on all our qubits seperately, what happens to one doesn't affect the others. If we were to measure one of the qubits, it wouldn't tell us anything about the other qubits. \n",
     "\n",
