--- a/English Chapters/0_Acknowledgements.ipynb
+++ b/English Chapters/0_Acknowledgements.ipynb
@@ -13,7 +13,9 @@
     "\n",
     "Thanking Cris for his invaluable GitHub support\n",
     "\n",
-    "For his excellent feedback on chapter 1, I would like to thank Ivan Arie De Jesus Caballero Simbaqueba."
+    "For his excellent feedback on chapter 1, I would like to thank Ivan Arie De Jesus Caballero Simbaqueba.\n",
+    "\n",
+    "For some design suggestions, thanks to Carla Juliana Acosta Zamudio."
    ]
   }
  ],
